--- a/package.json
+++ b/package.json
@@ -84,8 +84,10 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^11.0.0",
-    "@angular-devkit/architect-cli": "^0.1102.0",
-    "@angular-devkit/build-angular": "0.1100.5",
+    "@angular-devkit/architect": "^0.1101.2",
+    "@angular-devkit/architect-cli": "^0.1101.2",
+    "@angular-devkit/build-angular": "^0.1101.2",
+    "@angular-devkit/core": "^11.0.5",
     "@angular/bazel": "^11.0.5",
     "@angular/cli": "^11.0.5",
     "@angular/compiler": "^11.0.5",
@@ -97,9 +99,10 @@
     "@babel/cli": "^7.12.10",
     "@bazel/bazelisk": "^1.7.3",
     "@bazel/ibazel": "^0.14.0",
-    "@bazel/rollup": "^2.2.1",
-    "@bazel/terser": "^2.2.1",
-    "@bazel/typescript": "^2.2.1",
+    "@bazel/rollup": "^3.0.0",
+    "@bazel/terser": "^3.0.0",
+    "@bazel/typescript": "^3.0.0",
+    "@bazel/worker": "^3.0.0",
     "@commitlint/cli": "^11.0.0",
     "@nguniversal/builders": "^11.0.1",
     "@nguniversal/express-engine": "^11.0.1",
@@ -115,6 +118,7 @@
     "@politie/angular-testcafe-builder": "^2.0.5",
     "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-replace": "^2.3.4",
     "@types/chalk": "^2.2.0",
@@ -150,6 +154,7 @@
     "gonzales-pe": "^4.3.0",
     "highcharts": "^7.2.1",
     "husky": "^4.3.6",
+    "identity-obj-proxy": "^3.0.0",
     "inquirer": "^7.3.3",
     "jest": "^26.6.1",
     "jest-junit": "^10.0.0",
